--- a/templates/index.html
+++ b/templates/index.html
@@ -768,8 +768,7 @@ nav ul li a.donate-link {
             <div class="row">
                 <div class="col-md-12">
                     <h3>Who we Are</h3>
-                    <p>Queen of Peace Initiative is a women-led and women-centered organization committed to the liberation of indigenous women across the vast arid plains of northern Kenya from the extreme social, cultural and economic barriers that exist in the conflict-prone region.</p>
-                    <p>The organization is led by a council of women diligently drawn from organized women groups in Isiolo, Marsabit, Samburu and Laikipia counties. Queen of Peace Initiative, thanks to the generous support of our partners, is helping the indigenous women of northern Kenya to understand their rights, reclaim their voice and make valuable and visible contributions towards finding long-lasting solutions to the challenges facing the region, including insecurity, illiteracy, abject poverty, discrimination and gender-based violence.</p>
+                    <p>Queen of Peace Initiative is a women-led and women-centered organization committed to the liberation of indigenous women across the vast arid plains of northern Kenya from the extreme social, cultural and economic barriers that exist in the conflict-prone region The arid rangelands of northern Kenya are in the front-line of climate change impacts, with increasingly frequent and severe droughts that’s has brought climate-induced loss and damage. QPI was established in 2018 and located in the arid and semi-arid lands of Northern Kenya. QPI is currently working with organized women and youth groups. The organization is led by a council of women diligently drawn from organized women proups in Isiolo, Marsabit, Samburu and Laikipia counties</p>
                     <h3>What we do</h3>
                     <p>We are supporting indigenous women of northern Kenya gain the skills, knowledge and resources they need to be at the forefront of influencing decisions that improve the health and wellbeing of their lives, families and communities</p>
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/zcumRz2nthQ?si=GXfbR7sDLOAJEfSz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
@@ -917,15 +916,18 @@ nav ul li a.donate-link {
         <h3 style="text-align: center; margin-left: 100px;">Our Board</h3>
         <div class="container">
 
-        <div class="boarditem">
-            <img src="/static/images/board1.jpg" alt="member1">
-            <h2>Angela Sanau Paswa</h2>
-            <p>Angela Sanau Paswa works at Maasai Mara Wildlife Conservancies Association (MMWCA) as the Senior Programmes Officer - Gender and Youth. She is responsible for spearheading technical and programmatic interventions focusing on gender equity across conservancies in the Greater Maasai Mara.</p>
-            <a id="read-more-link-1" class="read-more-link" onclick="toggleReadMore(1)">Read More</a>
-            <div id="read-more-content-1" class="read-more-content">
-                <p>Angela is the founder of the Maasai Mara Women forum, an umbrella organization for women from the Mara ecosystem. She leads initiatives to enhance the capacity of women leaders and advocates for women’s and girls’ rights within the conservancies. She holds a Bachelor’s degree in Political Science and Anthropology.</p>
-            </div>
-        </div>
+         <!-- 
+<div class="boarditem">
+    <img src="/static/images/board1.jpg" alt="member1">
+    <h2>Angela Sanau Paswa</h2>
+    <p>Angela Sanau Paswa works at Maasai Mara Wildlife Conservancies Association (MMWCA) as the Senior Programmes Officer - Gender and Youth. She is responsible for spearheading technical and programmatic interventions focusing on gender equity across conservancies in the Greater Maasai Mara.</p>
+    <a id="read-more-link-1" class="read-more-link" onclick="toggleReadMore(1)">Read More</a>
+    <div id="read-more-content-1" class="read-more-content">
+        <p>Angela is the founder of the Maasai Mara Women forum, an umbrella organization for women from the Mara ecosystem. She leads initiatives to enhance the capacity of women leaders and advocates for women’s and girls’ rights within the conservancies. She holds a Bachelor’s degree in Political Science and Anthropology.</p>
+    </div>
+</div>
+-->
+
 
         <div class="boarditem">
             <img src="/static/images/board2.png" alt="member2">
@@ -1081,7 +1083,7 @@ nav ul li a.donate-link {
 
     <footer>
         <p>&copy; 2024 Queen Of Peace Initiative. All rights reserved.</p><br>
-        <p>Developed by Dunda Technologies:+254714359080</p>
+        <p>Developed by Dunda Technologies:+254722518476</p>
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
