Update index.html 1

--- a/templates/index.html
+++ b/templates/index.html
@@ -1072,7 +1072,7 @@ nav ul li a.donate-link {
             <div class="row">
                 <div class="col-md-12">
                     <h2 style="color: brown;">Contact Information</h2>
-                    <p>Email: <a href="mailto:info@thequeenofpeace.org">info@thequeenofpeace.org</a></p>
+                    <p>Email: <a href="mailto:queenofpeace353@gmail.com">queenofpeace353@gmail.com</a></p>
                     <p>Tel: 0701444161</p>
                     <p>Alt.Email: <a href="mailto:queenofpeace.organization@gmail.com">queenofpeace.organization@gmail.com</a></p>
                 </div>
